--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum vitae</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Petit+Formal+Script&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
     <h1>Curriculum vitae</h1>
 </header>
     <section class="osobni">
-    <table>
+        <table>
         <tr>
             <td>Jméno a příjmení:</td>
             <td class="udaj"> Jana Novotná</td>
@@ -28,8 +32,8 @@
             <td>Kontakt</td>
             <td class="udaj"><a href="....">novotna@adresa.cz</a>, 123 456 789</td>
         </tr>
-    
     </table>
+    <img src="girl.jpg" alt="portret">
 </section>
 <section class="zkusenosti">
     <h2>Profesní zkušenosti</h2>
