--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         <table>
         <tr>
             <td>Jméno a příjmení:</td>
-            <td class="udaj"> Jana Novotná</td>
+            <td class="udaj">Jana Novotná</td>
         </tr>
         <tr>
             <td>Rok narození:</td>
-            <td class="udaj">1995</td>
+            <td class="udaj">   1995</td>
         </tr>
         <tr>
             <td>Bydliště:</td>
-            <td class="udaj">Praha</td>
+            <td class="udaj">   Praha</td>
         </tr>
         <tr>
             <td>Kontakt</td>
-            <td class="udaj"><a href="....">novotna@adresa.cz</a>, 123 456 789</td>
+            <td class="udaj"><a href="....">novotna@adresa.cz</a></td>
         </tr>
     </table>
     <img src="girl.jpg" alt="portret">
@@ -65,7 +65,7 @@
     </ul></section>
     <section class="ja">
     <h2>Charakteristika</h2>
-    <p>Jsem vůdčí osobnost se silným analytickým myšlením a vášní pro řešení složitých problémů. Ráda pracuji s daty, hledám vzory a logické souvislosti. Mám zkušenosti s programováním v Pythonu a zájem o kryptografii a datovou analýzu. Jsem pečlivá, systematická a ráda se učím nové věci. Hledám příležitost, kde budu moci své dovednosti uplatnit a dále rozvíjet.</p>
+    <p>Jsem vůdčí osobnost se silným analytickým myšlením a vášní pro řešení složitých problémů. Ráda pracuji s daty, hledám vzory a logické souvislosti. Mám zkušenosti s programováním v <em>Pythonu</em> a zájem o kryptografii a datovou analýzu. Jsem pečlivá, systematická a ráda se učím nové věci. Hledám příležitost, kde budu moci své dovednosti uplatnit a dále rozvíjet.</p>
     </section>
     <footer>
         <p>Praha, 2025</p>
