Oprava: odstranění vnořeného repozitáře + vylepšení

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     </table>
     <img src="girl.jpg" alt="portret">
 </section>
+
+<div class="obsah">
+
 <section class="zkusenosti">
     <h2>Profesní zkušenosti</h2>
     <ul>
@@ -67,6 +70,7 @@
     <h2>Charakteristika</h2>
     <p>Jsem vůdčí osobnost se silným analytickým myšlením a vášní pro řešení složitých problémů. Ráda pracuji s daty, hledám vzory a logické souvislosti. Mám zkušenosti s programováním v <em>Pythonu</em> a zájem o kryptografii a datovou analýzu. Jsem pečlivá, systematická a ráda se učím nové věci. Hledám příležitost, kde budu moci své dovednosti uplatnit a dále rozvíjet.</p>
     </section>
+</div>
     <footer>
         <p>Praha, 2025</p>
     </footer>
