oprava jméno a email

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <table>
         <tr>
             <td>Jméno a příjmení:</td>
-            <td class="udaj">Jana Novotná</td>
+            <td class="udaj">Alžběta Brožová</td>
         </tr>
         <tr>
             <td>Rok narození:</td>
@@ -30,7 +30,7 @@
         </tr>
         <tr>
             <td>Kontakt</td>
-            <td class="udaj"><a href="....">novotna@adresa.cz</a></td>
+            <td class="udaj"><a href="mailto:brozova.b@gmail.com">brozova.b@gmail.com</a></td>
         </tr>
     </table>
     <img src="girl.jpg" alt="portret">
